data/derived/sp14/progs/unify/prog0496.ml.out
Characters 121-125:
   if ( List.mem(h, seen) = true) then seen' = seen else seen' = List.rev(h:: List.rev(seen)) in
                            ^^^^
Error: This expression has type bool but an expression was expected of type
         ('a * 'b) list -> bool
